# argos

./: .dockerignore  .gitignore  CHANGELOG.md  COMMUNITY_IDEAS.md  CONTRIBUTING.md  DISCLAIMER.md  INSTALL.md  INSTANT_WORK_INFO.md  LICENSE  NOTICE  README.md  ROADMAP.md  argos-setup.yaml.example  argos_error_log.py  argos_project_description.md  argos_skill_importer.py  argos_technical_architecture.md  argos_watchdog.py  auto_archive.py  db_backup.py  env.example  heartbeat.py  init_db.sql  nixos_index.py  requirements.txt  setup.sh  skill_importer.py  skill_selector.py
api/: archives.py  backup.py  chat.py  code_runner.py  compress.py  debug.py  executor.py  iso_builder.py  jobs.py  main.py  nanite.py
argos-core/: .gitignore  CONTRIBUTING.md  SECURITY.md  argos-setup.yaml.example  argos_error_log.py  argos_skill_importer.py  auto_archive.py  backup_db.sh  cristin_collector.py  db_backup.py  heartbeat.py  init_db.sql  nixos_index.py  requirements.txt  schema.sql  skill_importer.py  skill_selector.py
argos-core/hooks/argos-approval-hook/: Cargo.toml  README.md
argos-core/hooks/argos-approval-hook/src/: main.rs
argos-core/mcp_servers/argos_db_mcp/: .env.example  README.md  pyproject.toml  requirements.txt  server.py
argos-core/mcp_servers/argos_db_mcp/tests/: test_server.py
argos-nanite/: configuration.nix  nanite_daemon.py  watcher.sh
config/: argos-setup.yaml.example
docker/: Dockerfile  defcon.sh  docker-compose-standalone.yml  docker-compose.yml  swarm-stack.yml
skills/: docker.md  grok-api.md  idrac-dell.md  linux-generic.md  mikrotik-routeros.md  (+8 more)
(+132 files in other folders)
