[package]
name = "argos-approval-hook"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "argos-approval-hook"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pin ureq to exactly 2.9.x - newer 2.12 pulls url 2.5 with icu deps requiring rustc >= 1.82
ureq = { version = ">=2.9, <2.10", features = ["json"] }
# Pin url 2.4 (pre icu_normalizer)
url = "=2.4.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
