[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argos-db-mcp"
version = "0.1.0"
description = "MCP server custom Postgres pentru argos-db: masking system_credentials + approval flow pentru DML non-cc"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "asyncpg",
    "sqlparse",
    "python-dotenv",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "respx",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
timeout_method = "thread"
